Fix scrollbar and comments

--- a/injected/main.css
+++ b/injected/main.css
@@ -2,11 +2,21 @@ html {
     background-color: white;
 }
 
+body {
+    overflow-y: hidden !important;
+}
+
 .green {
     color: green !important;
 }
 
 
 #ud--commentsection {
-    overflow-y: scroll;
+    overflow: auto;
+    height: 200px;
+}
+
+.commentmargin {
+    margin: 5px 0 5px 0;
+    border-top: 1px solid #e2e4e8
 }
